# wuziqi_RL_high_speed

./: .gitignore  CMakeLists.txt  README.md  WEB_DIFFICULTY_CONFIG_README.md  full_train_pipeline.ps1  pretrain.py  requirements.txt  rule_demo.py  server.py  train.py
.cursor/rules/: projece-rule.mdc
.github/: copilot-instructions.md
gomoku/: __init__.py  coach.py  config.py  data_utils.py  game.py  mcts.py  neural_net.py  replay_buffer.py  rule_player.py  web_ui_prefs.py
models/: .gitkeep  latest_train_profile.json  train_state.json  web_ui_prefs.json
models/benchmark/: README.md
rule_demo_records/: record_1776003088.json
scripts/: build.bat  gen_rule_data.py  recommend_train_params.py
src/: bindings.cpp
src/game/: gomoku.h
src/mcts/: mcts.h  node.h  thread_pool.h
web/: __init__.py  app.py  game_session.py
web/static/: index.html
web/static/css/: style.css
web/static/js/: board.js  game.js
